# ai4es-tutorial

./: .gitignore  README.md
classifier/: README.md  pyproject.toml
classifier/.devcontainer/: Dockerfile  devcontainer.json
classifier/ai4es_tutorial/: __init__.py  determined_trial.py  fashion_mnist.py
classifier/ai4es_tutorial/determined_fashion_mnist/: adaptive.yaml  const.yaml  data.py  distributed.yaml  model_def.py
infra/: .terraform.lock.hcl  backend.tf  determined.tf  gcs.tf  gke.tf  network.tf  providers.tf  variables.tf
